--- a/entrees.html
+++ b/entrees.html
@@ -185,7 +185,7 @@ now i dont know where exactly in the code this is, but in sections 2-4 in the in
     
     .ingredients li:before {
       content: "•";
-      color: #000000;
+      color: #c72a2a;
       position: absolute;
       left: 0;
       font-size: 1.5em;
