--- a/entrees.html
+++ b/entrees.html
@@ -329,7 +329,8 @@ now i dont know where exactly in the code this is, but in sections 2-4 in the in
         font-size: 2.2rem;
     }
     h2 {
-        font-size: 1.8rem;
+        font-size: 5rem;
+      margin-bottom:40vh;
     }
     .recipe-card {
         padding: 20px;
