--- a/entrees.html
+++ b/entrees.html
@@ -340,6 +340,11 @@ now i dont know where exactly in the code this is, but in sections 2-4 in the in
 @media (max-width: 480px) {
     h1 {
         font-size: 1.8rem;
+      
+    }
+   h2 {
+        font-size: 5rem;
+      margin-bottom:20vh;
     }
     .section {
         height: 130vh;
