--- a/sauce.html
+++ b/sauce.html
@@ -431,6 +431,15 @@
     margin-right: auto !important;
     display: block !important;
   }
+     #section2 {
+      background-color: #e8e0c9;
+       height: 190vh;
+    }
+    
+    #section3 {
+      background-color: #e0d9c1;
+       height: 180vh;
+    }
 }
   </style>
 </head>
