--- a/entrees.html
+++ b/entrees.html
@@ -493,12 +493,12 @@
          <img src="./images3/entree3.png" alt="Pizza Recipe" class="recipe-image">
         <div class="instructions">
           <h3>Instructions</h3>
-          <p>Preheat oven to 375°F (190°C)</p>
-          <p>Place cooked chicken cutlets in baking dish</p>
-          <p>Top each cutlet with marinara sauce and sliced mozzarella</p>
-          <p>Bake for 10-15 minutes until cheese is melted and bubbly</p>
-          <p>Remove from oven and sprinkle with Reggiano parmigiano</p>
-          <p>Serve with pasta or crusty bread</p>
+          <p>Cook pasta according to package directions until al dente</p>
+          <p>While pasta cooks, slice cooked chicken cutlet into strips</p>
+          <p>Drain pasta, reserving 1/2 cup of pasta water</p>
+          <p>Add your marinara sauce to the pasta</p>
+          <p>Top with chicken strips and freshly grated Parmigiano cheese</p>
+          <p>Serve immediately</p>
         </div>
       </div>
     </div>
