--- a/meat.html
+++ b/meat.html
@@ -188,7 +188,7 @@
 
     /* Text Styles */
     h1 {
-      font-size: 3.5rem;
+      font-size: 5rem;
       margin-bottom: 1.5rem;
       font-family:'Seasons';
       color:#000000;
@@ -199,7 +199,7 @@
 }
     h2 {
       font-size: 6rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 40px;
       font-family: 'Seasons', sans-serif; /* Apply the font */
    
   font-weight: bold;
