--- a/meat.html
+++ b/meat.html
@@ -199,7 +199,7 @@
 }
     h2 {
       font-size: 6rem;
-      margin-bottom: 80px;
+      margin-bottom: 20vh;
       font-family: 'Seasons', sans-serif; /* Apply the font */
    
   font-weight: bold;
