--- a/meat.html
+++ b/meat.html
@@ -198,7 +198,7 @@
   src: url('fonts/the.otf') format('truetype'); /* Path to the font file */
 }
     h2 {
-      font-size: 4rem;
+      font-size: 6rem;
       margin-bottom: 18vh;
       font-family: 'Seasons', sans-serif; /* Apply the font */
    
@@ -459,7 +459,7 @@
   <!-- Third Section - Cutlets -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2 class="redsauce-header" >CHICKEN CUTLET</h2>
+      <h2 class="redsauce-header" >CUTLET</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
