--- a/meat.html
+++ b/meat.html
@@ -199,7 +199,7 @@
 }
     h2 {
       font-size: 6rem;
-      margin-bottom: 18vh;
+      margin-bottom: 14vh;
       font-family: 'Seasons', sans-serif; /* Apply the font */
    
   font-weight: bold;
@@ -459,7 +459,7 @@
   <!-- Third Section - Cutlets -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2 class="redsauce-header" >CUTLET</h2>
+      <h2 class="redsauce-header" >CUTLETS</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
