--- a/pizza.html
+++ b/pizza.html
@@ -147,7 +147,7 @@
 }
     h2 {
       font-size: 6rem;
-      padding-bottom: 60px;
+      padding-bottom: 10vh;
        font-family: 'Sauce', sans-serif; /* Apply the font */
     }
     
