--- a/pizza.html
+++ b/pizza.html
@@ -147,6 +147,7 @@
 }
     h2 {
       font-size: 6rem;
+      margin-top:30px;
       padding-bottom: 1vh;
        font-family: 'Sauce', sans-serif; /* Apply the font */
     }
