--- a/sauce.html
+++ b/sauce.html
@@ -424,6 +424,9 @@
     text-align: center !important;
     width: 100% !important;
   }
+    h1 {
+      font-size:2.5rem;
+    }
   
   .recipe-image {
     max-width: 100% !important;
