--- a/sauce.html
+++ b/sauce.html
@@ -383,6 +383,7 @@
   
   #section1 .recipe-content {
     margin: 10px 0 !important;
+    width: 70%;
   }
   
   #section1 .left-image {
@@ -436,12 +437,12 @@
   }
      #section2 {
       background-color: #e8e0c9;
-       height: 240vh;
+       height: 250vh;
     }
     
     #section3 {
       background-color: #e0d9c1;
-       height: 180vh;
+       height: 185vh;
     }
 }
   </style>
