--- a/entrees.html
+++ b/entrees.html
@@ -338,9 +338,12 @@
 
 @media (max-width: 480px) {
     h1 {
-        font-size: 1.8rem;
+        font-size: 2.5rem;
       
     }
+  h6{
+    width:75%;}
+  
    h2 {
         font-size: 5rem;
       margin-bottom:10vh;
