--- a/meat.html
+++ b/meat.html
@@ -330,7 +330,7 @@
       
       h2 {
         font-size: 3rem;
-        margin-bottom:60px;
+        margin-bottom:10vh;
       }
       
       .recipe-card {
