--- a/sauce.html
+++ b/sauce.html
@@ -18,26 +18,22 @@
   background-color: #f0e6d2 !important; /* Force background */
 }
 
+/* Replace your existing section animations with this */
 #section2, #section3 {
   position: relative;
   z-index: 1;
-  background-color: inherit; /* Ensures background is always present */
+  /* Remove any opacity settings from the sections themselves */
 }
 
-/* Force specific background colors */
-#section2 { 
-  background-color: #e8e0c9 !important; 
-}
+/* Keep background colors forced */
+#section2 { background-color: #e8e0c9 !important; }
+#section3 { background-color: #e0d9c1 !important; }
 
-#section3 { 
-  background-color: #e0d9c1 !important; 
-}
-
-/* Smoother fade-in animation */
+/* Animation for content only */
 #section2 .recipe-content,
 #section3 .recipe-content {
   opacity: 0;
-  transform: translateY(20px); /* Reduced from 80px */
+  transform: translateY(20px);
   transition: 
     opacity 0.8s ease-out,
     transform 0.6s ease-out;
