--- a/meat.html
+++ b/meat.html
@@ -475,7 +475,7 @@
             <li>1 cup romano/parmesan cheese</li>
           </ul>
         </div>
-
+<img src="./images3/gh.png" alt="Pizza Recipe" class="recipe-image">
 <img src="./images3/CR.png" alt="Pizza Recipe" class="recipe-image">
         
         <div class="instructions">
