--- a/meat.html
+++ b/meat.html
@@ -475,8 +475,8 @@
             <li>1 cup romano/parmesan cheese</li>
           </ul>
         </div>
-<img src="./images3/gh.png" alt="Pizza Recipe" class="recipe-image">
-<img src="./images3/CR.png" alt="Pizza Recipe" class="recipe-image">
+
+<img src="./images3/cr.png" alt="Pizza Recipe" class="recipe-image">
         
         <div class="instructions">
           <h3>Instructions</h3>
