--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <style>
     body {
       margin: 0;
-      background-color: #f8f8f2;
+      background-color: #f0e6d2;
       font-family: 'Georgia', 'Arial Black', sans-serif;
       font-weight: 700;
-      color: #333;
+      color: #f0e6d2;
       font-size: 5rem;
       user-select: none;
       cursor: url('/path-to-image.png') 16 16, auto;
