--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-color: #f0e6d2;
       font-family: 'Georgia', 'Arial Black', sans-serif;
       font-weight: 700;
-      color: #f0e6d2;
+      color: #333;
       font-size: 5rem;
       user-select: none;
       cursor: url('/path-to-image.png') 16 16, auto;
