--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
 
     #section1 { background-color: transparent; color: transparent; }
-    #section2 { background-color: #e0dfd5; }
+    #section2 { background-color: #e3d8c2; }
     #section3 { 
       background-color: #d0cec7;
       overflow: hidden; /* Added to prevent overflow */
