--- a/pizza.html
+++ b/pizza.html
@@ -149,7 +149,7 @@
     }
     @font-face {
   font-family: 'Sauce';  /* Give your font a name */
-  src: url('fonts/lostar.ttf') format('truetype'); /* Path to the font file */
+  src: url('fonts/Lostar.ttf') format('truetype'); /* Path to the font file */
 }
     h2 {
       font-size: 6rem;
